Homepage: Fix spacing around sign up/in button

--- a/src/styles/components/_login.component.sass
+++ b/src/styles/components/_login.component.sass
@@ -79,6 +79,7 @@ login
       font-weight: bold
 
   .switch-sign-up-in
+    margin-top: 1rem
     text-align: center
     letter-spacing: 1.2px
 
